@@ -6,7 +6,6 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.4.3</version>
-		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>hu.kunb</groupId>
 	<artifactId>paymentapi</artifactId>
@@ -34,15 +33,22 @@
 		<lombok.version>1.18.36</lombok.version>
 		<openapi-generator-maven-plugin.version>7.0.1</openapi-generator-maven-plugin.version>
 		<spring-kafka.version>3.3.3</spring-kafka.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+		<pitest-maven.version>1.15.2</pitest-maven.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
@@ -56,31 +62,15 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.kafka</groupId>-->
-<!--			<artifactId>spring-kafka</artifactId>-->
-<!--			<version>${spring-kafka.version}</version>-->
-<!--		</dependency>-->
 		<dependency>
 			<groupId>org.openapitools</groupId>
 			<artifactId>jackson-databind-nullable</artifactId>
@@ -96,6 +86,27 @@
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
+			<version>6.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.pitest</groupId>
+			<artifactId>pitest-parent</artifactId>
+			<version>${pitest-maven.version}</version>
+			<type>pom</type>
+		</dependency>
+		<dependency>
+			<groupId>org.pitest</groupId>
+			<artifactId>pitest-junit5-plugin</artifactId>
+			<version>1.2.1</version>
 		</dependency>
 
 	</dependencies>
@@ -128,6 +139,30 @@
 					</configOptions>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.pitest</groupId>
+				<artifactId>pitest-maven</artifactId>
+				<configuration>
+					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens
+						java.base/java.util=ALL-UNNAMED
+					</argLine>
+					<withHistory>true</withHistory>
+					<historyInputFile>../mutationhistory/${project.artifactId}.historyfile</historyInputFile>
+					<historyOutputFile>../mutationhistory/${project.artifactId}.historyfile</historyOutputFile>
+					<excludedClasses>
+						<excludedClass>hu.kunb.paymentapi.config.OpenAPIConfig</excludedClass>
+						<excludedClass>hu.kunb.paymentapi.ServletInitializer</excludedClass>
+						<excludedClass>org.openapitools.*</excludedClass>
+						<excludedClass>hu.kunb.paymentapi.rest.controller.GlobalExceptionHandler</excludedClass>
+						<excludedClass>hu.kunb.paymentapi.config.AppConfig</excludedClass>
+					</excludedClasses>
+
+<!--					<targetClasses>-->
+<!--						<param></param>-->
+<!--					</targetClasses>-->
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
